<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ll_subscription_list"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:layout_margin="5dp"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/rl_close"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:onClick="onCloseClicked"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp">

        <ImageView
            android:layout_width="@dimen/subscription_close_layout_height"
            android:layout_height="@dimen/subscription_close_layout_height"
            android:background="@drawable/ic_close_white"
            android:padding="10dp" />

    </RelativeLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center_horizontal"
        android:text="@string/subscription_dialog_title"
        android:textColor="@color/white"
        android:textSize="@dimen/subscription_dialog_title"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="@dimen/subscription_dialog_smiley"
            android:layout_height="@dimen/subscription_dialog_smiley"
            android:layout_gravity="center_vertical"
            android:background="@drawable/ic_smile" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="10dp"
            android:text="@string/enjoy_free_scan"
            android:textColor="@color/white" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="@dimen/subscription_dialog_smiley"
            android:layout_height="@dimen/subscription_dialog_smiley"
            android:layout_gravity="center_vertical"
            android:background="@drawable/ic_cancel" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="10dp"
            android:text="@string/cancel_anytime"
            android:textColor="@color/white" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="20dp"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="@dimen/subscription_dialog_smiley"
            android:layout_height="@dimen/subscription_dialog_smiley"
            android:layout_gravity="center_vertical" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="10dp"
            android:text="@string/cancel_anytime_subtitle"
            android:textColor="@color/white"
            android:textSize="@dimen/subscription_dialog_subtitle" />

    </LinearLayout>

    <include
        layout="@layout/layout_plan_list"/>

</LinearLayout>