<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="300dp"
    android:layout_height="200dp"
    android:layout_gravity="center">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:id="@+id/rl_progress"
        android:background="@drawable/device_dialog_bg">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_centerInParent="true">

            <ProgressBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/progress"
                android:layout_gravity="center"/>

            <TextView
                android:id="@+id/statusTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textSize="15dp"
                android:text="@string/processing"
                android:textColor="@color/black_dark"
                android:paddingBottom="8dp"
                android:paddingTop="8dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp" />

        </LinearLayout>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:id="@+id/rl_currency"
        android:visibility="gone"
        android:background="@drawable/device_dialog_bg">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_centerInParent="true">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textSize="15dp"
                android:text="@string/select_currency_title"
                android:textColor="@color/black_dark"
                android:paddingBottom="8dp"
                android:paddingTop="8dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp" />

            <Spinner
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/sp_currency"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/bg_spinner"/>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp">

                <Button
                    android:layout_width="80dp"
                    android:layout_height="40dp"
                    android:id="@+id/btn_submit"
                    android:text="@string/submit"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp"
                    android:textColor="@color/white"
                    android:background="@drawable/bg_monthly_pay_button"
                    android:layout_centerHorizontal="true"/>


            </RelativeLayout>

        </LinearLayout>

    </RelativeLayout>

</FrameLayout>