<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorPrimaryDark">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:background="@color/white">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_monthly"
                android:layout_width="match_parent"
                android:layout_height="@dimen/payment_type_title_height"
                android:background="@color/monthly_color"
                android:gravity="center_vertical"
                android:paddingLeft="20dp"
                android:onClick="onMonthlyClicked"
                android:text="@string/subscription_monthly"
                android:textColor="@color/white"
                android:drawableRight="@drawable/ic_arrow_down"/>

            <com.mfcu.zerosnapscanner.expandablelayout.ExpandableRelativeLayout
                android:id="@+id/erl_monthly"
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:minHeight="120dp"
                app:ael_duration="500"
                app:ael_expanded="false"
                android:background="@color/monthly_color_light"
                app:ael_interpolator="accelerateDecelerate"
                app:ael_orientation="vertical">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="10dp"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Amount to pay:"
                            android:textSize="15dp"
                            android:textColor="@color/black_dark"
                            android:layout_marginRight="10dp"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/tv_monthly_price"
                            android:text=""
                            android:textColor="@color/black_dark"
                            android:layout_centerVertical="true"
                            android:layout_marginLeft="10dp"
                            android:textSize="@dimen/payment_price_font"/>

                    </LinearLayout>

                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="@dimen/payment_button_height"
                        android:id="@+id/btn_monthly_pay"
                        android:text="@string/pay"
                        android:paddingLeft="5dp"
                        android:paddingRight="5dp"
                        android:textColor="@color/white"
                        android:onClick="onMonthlyPayClicked"
                        android:background="@drawable/bg_monthly_pay_button"
                        android:layout_alignParentBottom="true"
                        android:layout_alignParentRight="true"
                        android:layout_marginBottom="10dp"
                        android:layout_marginRight="10dp"/>

                </RelativeLayout>

            </com.mfcu.zerosnapscanner.expandablelayout.ExpandableRelativeLayout>

            <TextView
                android:id="@+id/tv_yearly"
                android:layout_width="match_parent"
                android:layout_height="@dimen/payment_type_title_height"
                android:background="#FC9501"
                android:gravity="center_vertical"
                android:paddingLeft="20dp"
                android:onClick="onYearlyClicked"
                android:text="@string/subscription_annual"
                android:textColor="@color/white"
                android:drawableRight="@drawable/ic_arrow_down"/>

            <com.mfcu.zerosnapscanner.expandablelayout.ExpandableRelativeLayout
                android:id="@+id/erl_yearly"
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:minHeight="120dp"
                app:ael_duration="500"
                app:ael_expanded="false"
                android:background="#70FC9501"
                app:ael_interpolator="accelerateDecelerate"
                app:ael_orientation="vertical">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="10dp"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Amount to pay:"
                            android:textSize="15dp"
                            android:textColor="@color/black_dark"
                            android:layout_marginRight="10dp"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/tv_yearly_price"
                            android:text=""
                            android:textColor="@color/black_dark"
                            android:layout_centerVertical="true"
                            android:layout_marginLeft="10dp"
                            android:textSize="@dimen/payment_price_font"/>

                    </LinearLayout>

                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="@dimen/payment_button_height"
                        android:id="@+id/btn_yearly_pay"
                        android:text="@string/pay"
                        android:paddingLeft="5dp"
                        android:paddingRight="5dp"
                        android:textColor="@color/white"
                        android:onClick="onAnnuallyPayClicked"
                        android:background="@drawable/bg_monthly_pay_button"
                        android:layout_alignParentBottom="true"
                        android:layout_alignParentRight="true"
                        android:layout_marginBottom="10dp"
                        android:layout_marginRight="10dp"/>

                </RelativeLayout>

            </com.mfcu.zerosnapscanner.expandablelayout.ExpandableRelativeLayout>

        </LinearLayout>

    </RelativeLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:textColor="@color/white"
        android:background="@color/colorPrimaryDark"
        android:textSize="@dimen/conditions_apply"
        android:text="@string/conditions_apply"
        />

</RelativeLayout>